# banana-slides

./: .dockerignore  .gitignore  pyproject.toml  temp_openapi.json
.ipynb_checkpoints/: docker-compose-checkpoint.yml  env-checkpoint
backend/: .gitignore  app.py  database.py  main.py  test_api.py
backend/.ipynb_checkpoints/: Dockerfile-checkpoint  run-checkpoint.sh
backend/controllers/: __init__.py  export_controller.py  file_controller.py  material_controller.py  page_controller.py  project_controller.py  reference_file_controller.py  settings_controller.py  template_controller.py
backend/models/: __init__.py  material.py  page.py  page_image_version.py  project.py  reference_file.py  request_models.py  settings.py  task.py  user_template.py
backend/services/: file_service.py  task_manager.py
backend/services/ai_providers/: __init__.py
backend/tests/: conftest.py  pytest.ini
backend/tests/integration/: test_full_workflow.py
backend/tests/unit/: test_api_health.py  test_api_project.py
backend/utils/: response.py
frontend/src/api/: client.ts  endpoints.ts
scripts/call_gemini_model_test/: example_usage.py  gemini_image_gen_advanced.py  gemini_image_generator.py
